[package]
name = "io-mux"
version = "1.4.0"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
description = "Provide multiple file descriptors writing into one in-order pipe, tagged by the source of data (e.g. stdout/stderr)"
keywords = ["log", "pipe", "stdout", "stderr"]
categories = ["command-line-interface"]
repository = "https://github.com/joshtriplett/io-mux"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
async-io = { version = "1.2", optional = true }
rustix = { version = "0.37.19", features = ["net"] }
tempfile = "3.1"

[dev-dependencies]
async-process = "1.0.1"
futures-lite = "1.11.2"

[features]
# Enable the AsyncMux type
async = ["async-io"]
# Support building on non-Linux targets. See the portability notes in the
# documentation before enabling this.
experimental-unix-support = []
# Test the portable code path on Linux, to confirm that it compiles and runs.
test-portable = []
